# caret

./: .gitignore  .hg_archival.txt  .hgignore  .hgtags  CMakeLists.txt  Doxyfile  Makefile  README.md  build_dos_gcc.bat  caret_qmake_include.pro  caret_qmake_include.pro.john  caret_qmake_include_linux64.pro  install_dos.bat  run_qmake_dos.bat  run_qmake_dos_alt.bat  run_qmake_dos_debug_alt.bat  saved_CMakeLists.txt
caret_cifti/: CMakeLists.txt  CiftiFile.cxx  CiftiFile.h  CiftiFileException.cxx  CiftiFileException.h  CiftiMatrix.cxx  CiftiMatrix.h  CiftiXML.h  CiftiXMLElements.h  CiftiXMLReader.cxx  CiftiXMLReader.h  CiftiXMLWriter.cxx  CiftiXMLWriter.h  Nifti2Header.cxx  Nifti2Header.h  caret_cifti.pro  cifti.pro  nifti2.h
caret_common/: .cproject  .project  Basename.cxx  Basename.h  CMakeLists.txt  CaretException.h  CaretLinkedList.cxx  CaretLinkedList.h  CaretTips.cxx  CaretTips.h  CaretVersion.h  Categories.cxx  Categories.h  Category.cxx  Category.h  CommandLineUtilities.cxx  CommandLineUtilities.h  DateAndTime.cxx  DateAndTime.h  DebugControl.cxx  DebugControl.h  FileUtilities.cxx  FileUtilities.h  GaussianComputation.cxx  GaussianComputation.h  HtmlColors.cxx  HtmlColors.h  HttpFileDownload.cxx  HttpFileDownload.h  MathUtilities.cxx  MathUtilities.h  MatrixUtilities.h  NameIndexSort.cxx  NameIndexSort.h  PointLocator.cxx  PointLocator.h  ProgramParameters.cxx  ProgramParameters.h  ProgramParametersException.cxx  ProgramParametersException.h  (+21 more)
caret_files/: .cproject  .project  AbstractFile.cxx  AbstractFile.h  AfniHeader.cxx  AfniHeader.h  AreaColorFile.cxx  AreaColorFile.h  ArealEstimationFile.cxx  ArealEstimationFile.h  AtlasSpaceFile.cxx  AtlasSpaceFile.h  AtlasSurfaceDirectoryFile.cxx  AtlasSurfaceDirectoryFile.h  BorderColorFile.cxx  BorderColorFile.h  BorderFile.cxx  BorderFile.h  BorderProjectionFile.cxx  BorderProjectionFile.h  BrainVoyagerFile.cxx  BrainVoyagerFile.h  ByteSwapping.cxx  ByteSwapping.h  CMakeLists.txt  Caret6ProjectedItem.cxx  Caret6ProjectedItem.h  Caret7ProjectedItem.cxx  Caret7ProjectedItem.h  CaretScriptFile.cxx  CaretScriptFile.h  CellBase.cxx  CellBase.h  CellClass.h  CellColorFile.cxx  CellColorFile.h  CellFile.cxx  CellFile.h  CellProjectionFile.cxx  CellProjectionFile.h  (+171 more)
caret_gifti/: AbstractFile.cxx  AbstractFile.h  CMakeLists.txt  CoordinateFile.cxx  CoordinateFile.h  DeformationMapFile.cxx  DeformationMapFile.h  FileException.cxx  FileException.h  GiftiCommon.cxx  GiftiDataArray.cxx  GiftiDataArray.h  GiftiDataArrayFile.cxx  GiftiDataArrayFileSaxReader.cxx  GiftiDataArrayFileStreamReader.cxx  GiftiDataArrayFileStreamReader.h  GiftiLabelTable.cxx  GiftiLabelTable.h  GiftiMatrix.cxx  GiftiMetaData.cxx  GiftiNodeDataFile.cxx  StudyMetaDataLink.cxx  StudyMetaDataLinkSet.h  SurfaceFile.cxx  SurfaceFile.h  SurfaceShapeFile.cxx  SurfaceShapeFile.h  TextFile.cxx  TopologyFile.cxx  TopologyFile.h  XhtmlTableExtractorFile.cxx  XmlGenericWriter.cxx  XmlGenericWriterAttributes.h  caret_gifti.pro  gifti.pro  main.cxx
caret_gui/: CMakeLists.txt  GuiAlignSurfaceToStandardOrientationDialog.cxx  GuiAutomaticRotationDialog.h  GuiAverageBorderDialog.cxx  GuiAverageCoordinateDialog.h  GuiBatchCommandDialog.h  GuiBorderAttributesDialog.h  GuiBorderComparisonDialog.h  GuiBorderDrawUpdateDialog.cxx  GuiBorderProjectionDialog.h  GuiBrainModelOpenGL.cxx  GuiBrainModelOpenGLKeyEvent.cxx  GuiBrainModelOpenGLKeyEvent.h  GuiBrainModelOpenGLMouseEvent.h  GuiBrainModelOpenGLPopupMenu.cxx  GuiBrainModelOpenGLPopupMenu.h  GuiBrainModelSurfaceSelectionComboBox.cxx  GuiBrainModelSurfaceSelectionComboBox.h  GuiBrainModelViewingWindow.cxx  GuiBrainSetAndModelSelectionControl.cxx  GuiCellAndFociAttributeAssignmentDialog.h  GuiCellAndFociReportDialog.h  GuiCellAttributesDialog.cxx  GuiCellAttributesDialog.h  GuiChooseNodeAttributeColumnDialog.cxx  GuiChooseSpecFileDialog.cxx  GuiColorFileEditorDialog.h  GuiColorFileEditorWidget.cxx  GuiColorKeyDialog.cxx  GuiColorSelectionDialog.cxx  GuiColorSelectionDialog.h  GuiCommaSeparatedValueFileEditor.cxx  GuiCommaSeparatedValueFileEditor.h  GuiCommunicatorClientConnectDialog.cxx  GuiCommunicatorClientConnectDialog.h  GuiConnectivityDialog.h  GuiContourAlignmentDialog.h  GuiContourReconstructionDialog.cxx  GuiContourSectionControlDialog.cxx  GuiContourSectionControlDialog.h  (+149 more)
caret_statistics/: .cproject  .project  CMakeLists.txt  StatisticAlgorithm.cxx  StatisticAlgorithm.h  StatisticAnovaOneWay.cxx  StatisticAnovaOneWay.h  StatisticAnovaTwoWay.cxx  StatisticAnovaTwoWay.h  StatisticConvertToZScore.cxx  StatisticConvertToZScore.h  StatisticCorrelationCoefficient.cxx  StatisticCorrelationCoefficient.h  StatisticDataGroup.cxx  StatisticDataGroup.h  StatisticDcdflib.cxx  StatisticDcdflib.h  StatisticDescriptiveStatistics.cxx  StatisticDescriptiveStatistics.h  StatisticException.cxx  StatisticException.h  StatisticFalseDiscoveryRate.cxx  StatisticFalseDiscoveryRate.h  StatisticGeneratePValue.cxx  StatisticGeneratePValue.h  StatisticHistogram.cxx  StatisticHistogram.h  StatisticKruskalWallis.cxx  StatisticKruskalWallis.h  StatisticLeveneVarianceEquality.cxx  StatisticLeveneVarianceEquality.h  StatisticLinearRegression.cxx  StatisticLinearRegression.h  StatisticMatrix.cxx  StatisticMatrix.h  StatisticMeanAndDeviation.cxx  StatisticMeanAndDeviation.h  StatisticMultipleRegression.cxx  StatisticMultipleRegression.h  StatisticNormalizeDistribution.cxx  (+26 more)
caret_uniformize/: .cproject  .project  CMakeLists.txt  caret_uniformize.cxx  caret_uniformize.h  caret_uniformize.pro  estpdf3.c  matrix.cxx  matrix.h  pdf.c  randgen.c
caret_widgets/: .cproject  .project  CMakeLists.txt  QtCheckBoxSelectionDialog.cxx  QtCheckBoxSelectionDialog.h  QtCheckBoxSelectionLineEditDialog.cxx  QtCheckBoxSelectionLineEditDialog.h  QtDataEntryDialog.cxx  QtDataEntryDialog.h  QtDialog.cxx  QtDialog.h  QtDialogModal.cxx  QtDialogModal.h  QtDialogNonModal.cxx  QtDialogNonModal.h  QtDialogWizard.cxx  QtDialogWizard.h  QtFileDialog.cxx  QtFileDialog.h  QtInputDialog.cxx  QtInputDialog.h  QtListBoxSelectionDialog.cxx  QtListBoxSelectionDialog.h  QtMainWindow.cxx  (+40 more)
(+1512 files in other folders)
