
#
# Name of Project
#
PROJECT(CaretGui)


#
# QT include files
#
SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTXML TRUE)

INCLUDE(${QT_USE_FILE})

SET(MOC_INPUT_HEADER_FILES
	   CommunicatorClientAFNI.h 
	   CommunicatorClientFIV.h 
	   CommunicatorClientBase.h 
	   GuiAddCellsDialog.h 
	   GuiAlignSurfaceToStandardOrientationDialog.h 
	   GuiApplyDeformationMapDialog.h 
	   GuiAverageBorderDialog.h 
	   GuiAverageCoordinateDialog.h 
	   GuiAutomaticRotationDialog.h 
	   GuiBatchCommandDialog.h 
	   GuiBorderAttributesDialog.h 
      GuiBorderComparisonDialog.h 
      GuiBorderDrawUpdateDialog.h 
	   GuiBorderNamesListBoxSelectionDialog.h 
      GuiBorderOperationsDialog.h 
	   GuiBorderProjectionDialog.h 
      GuiBordersCreateInterpolatedDialog.h 
      GuiBrainModelOpenGL.h 
      GuiBrainModelOpenGLKeyEvent.h 
	   GuiBrainModelOpenGLMouseEvent.h 
	   GuiBrainModelOpenGLPopupMenu.h 
      GuiBrainModelSelectionComboBox.h 
      GuiBrainModelSurfaceSelectionComboBox.h 
      GuiBrainModelViewingWindow.h 
      GuiBrainSetAndModelSelectionControl.h 
      GuiCaptureWindowImageDialog.h 
      GuiCaretCommandDialog.h 
      GuiCaretCommandScriptBuilderDialog.h 
      GuiCaretCommandWidget.h 
      GuiCaretTipsDialog.h 
      GuiCategoryComboBox.h 
      GuiCellAndFociAttributeAssignmentDialog.h 
      GuiCellAndFociReportDialog.h 
	   GuiCellAttributesDialog.h 
      GuiCellsOrFociProjectionDialog.h 
	   GuiChooseNodeAttributeColumnDialog.h 
      GuiChooseSpecFileDialog.h 
	   GuiColorFileEditorDialog.h 
      GuiColorFileEditorWidget.h 
      GuiColorKeyDialog.h 
	   GuiColorSelectionDialog.h 
      GuiCommaSeparatedValueFileEditor.h 
	   GuiCommunicatorClientConnectDialog.h 
      GuiConnectivityDialog.h 
	   GuiContourAlignmentDialog.h 
	   GuiContourDrawDialog.h 
	   GuiContourReconstructionDialog.h 
	   GuiContourSectionControlDialog.h 
	   GuiContourSetScaleDialog.h 
	   GuiConvertDataFileDialog.h 
      GuiCopySpecFileDialog.h 
	   GuiCurrentColoringToRgbPaintDialog.h 
	   GuiDataFileCommentDialog.h 
      GuiDataFileImportOptionsDialog.h 
      GuiDataFileMathDialog.h 
      GuiDataFileOpenDialog.h 
      GuiDataFileSaveDialog.h 
	   GuiDeformationFieldDialog.h 
	   GuiDeleteBordersByNameDialog.h 
	   GuiDisplayControlDialog.h 
      GuiDisplayControlSurfaceOverlayWidget.h 
	   GuiDistortionDialog.h 
	   GuiDrawBorderDialog.h 
      GuiFilesModified.h 
      GuiFileDialogWithInstructions.h 
      GuiFileSelectionButton.h 
      GuiFileSelectionButtonAndLineEditWidget.h 
      GuiFileSelectionListWidget.h 
      GuiFociPalsProjectionDialog.h 
      GuiFociSearchWidget.h 
	   GuiFociUncertaintyLimitsDialog.h 
      GuiFlattenFullHemisphereDialog.h 
	   GuiFlattenHemisphereDialog.h 
	   GuiFlattenHemisphereInstructionsDialog.h 
	   GuiGenerateArealEstimationDialog.h 
	   GuiGenerateSulcalDepthDialog.h 
	   GuiGenerateSurfaceCurvatureDialog.h 
      GuiGraphWidget.h 
      GuiGraphWidgetDialog.h 
      GuiHelpAssistantWindow.h 
      GuiHelpViewerWindow.h 
      GuiHistogramDisplayDialog.h 
      GuiHtmlColorChooserDialog.h 
	   GuiHyperLinkTextBrowser.h 
      GuiIdentifyDialog.h 
      GuiImageEditorWindow.h 
      GuiImageFormatComboBox.h 
      GuiImageResizeDialog.h 
      GuiImageViewingWindow.h 
	   GuiInflateAndSmoothFingersDialog.h 
	   GuiInflateSurfaceDialog.h 
	   GuiInterpolateSurfacesDialog.h 
      GuiLoadedFileManagementDialog.h 
      GuiMainWindow.h 
      GuiMainWindowAttributesActions.h 
	   GuiMainWindowAttributesMenu.h 
      GuiMainWindowCommActions.h 
	   GuiMainWindowCommMenu.h 
      GuiMainWindowFileActions.h 
      GuiMainWindowFileMenu.h 
      GuiMainWindowHelpActions.h 
      GuiMainWindowHelpMenu.h 
      GuiMainWindowLayersActions.h 
	   GuiMainWindowLayersMenu.h 
      GuiMainWindowSurfaceActions.h 
      GuiMainWindowSurfaceMenu.h 
      GuiMainWindowTimingActions.h 
      GuiMainWindowTimingMenu.h 
      GuiMainWindowVolumeActions.h 
	   GuiMainWindowVolumeMenu.h 
      GuiMainWindowWindowActions.h 
      GuiMainWindowWindowMenu.h 
      GuiMapFmriAtlasDialog.h   
      GuiMapFmriDialog.h 
      GuiMapFmriMappingSet.h 
      GuiMapFmriMetricInfo.h 
      GuiMapFmriSpecFileTopoCoordDialog.h 
      GuiMapFmriThresholdDialog.h 
      GuiMapFmriVolume.h 
      GuiMapStereotaxicFocusDialog.h 
	   GuiMetricModificationDialog.h 
	   GuiMetricsToRgbPaintDialog.h 
      GuiModelSelectionControl.h 
      GuiModelsEditorDialog.h 
	   GuiMorphingDialog.h 
	   GuiMorphingMeasurementsDialog.h 
      GuiMouseModePopupMenu.h 
	   GuiMultipleInputDialog.h 
	   GuiMultiresolutionMorphingDialog.h 
	   GuiNameSelectionDialog.h 
	   GuiNodeAttributeColumnSelectionComboBox.h 
	   GuiNodeAttributeFileClearResetDialog.h 
	   GuiLoadNodeAttributeFileColumnSelectionDialog.h 
	   GuiPaintColumnNamesListBoxSelectionDialog.h 
	   GuiPaintNameEditorDialog.h 
      GuiPaletteColorSelectionDialog.h 
      GuiPaletteEditorDialog.h 
      GuiParamsFileEditorDialog.h 
	   GuiPreferencesDialog.h 
      GuiPreviousSpecFileComboBox.h 
	   GuiRecordingDialog.h 
	   GuiResectionDialog.h 
	   GuiSectionControlDialog.h 
	   GuiSetTopologyDialog.h 
	   GuiSetViewDialog.h 
      GuiShapeOrVectorsFromCoordinateSubtractionDialog.h 
      GuiShellCommandWindow.h 
	   GuiSmoothingDialog.h 
      GuiSpecAndSceneFileCreationDialog.h 
      GuiSpecFileCreationDialog.h 
      GuiSpecFileDialog.h 
      GuiSpeciesComboBox.h 
      GuiStandardMeshDialog.h 
      GuiStereotaxicSpaceComboBox.h 
      GuiStructureComboBox.h 
      GuiStudyCollectionFileEditorDialog.h 
      GuiStudyInfoEditorWidget.h 
      GuiStudyMetaDataFileEditorDialog.h 
      GuiStudyMetaDataLinkCreationDialog.h 
      GuiSumsDialog.h 
	   GuiSurfaceDeformationDialog.h 
	   GuiSurfaceInformationDialog.h 
	   GuiSurfaceRegionOfInterestDialog.h 
	   GuiSurfaceRegionOfInterestDialogOLD.h 
	   GuiSurfaceSpmTransformDialog.h 
	   GuiSurfaceToVolumeDialog.h 
      GuiSurfaceTopologyReportDialog.h 
      GuiSurfaceTypeComboBox.h 
      GuiTextBrowser.h 
	   GuiToolBar.h 
      GuiToolBarActions.h 
	   GuiTopologyFileComboBox.h 
      GuiTopologyTypeComboBox.h 
	   GuiTransformationMatrixDialog.h 
      GuiTransformationMatrixSelectionControl.h 
	   GuiUserViewSaveDialog.h 
      GuiVectorFileComboBox.h 
      GuiVocabularyFileEditorDialog.h 
	   GuiVolumeAttributesDialog.h 
      GuiVolumeBiasCorrectionDialog.h 
      GuiVolumeCreateDialog.h 
	   GuiVolumeFileOrientationComboBox.h 
	   GuiVolumeFileSelectionComboBox.h 
      GuiVolumeFileTypeComboBox.h 
	   GuiVolumeHandleFinderDialog.h 
      GuiVolumePaintEditorDialog.h 
	   GuiVolumeReconstructionDialog.h 
	   GuiVolumeRegionOfInterestDialog.h 
      GuiVolumeRescaleDialog.h 
	   GuiVolumeResizingDialog.h 
	   GuiVolumeSegmentationEditorDialog.h 
      GuiVolumeSelectionControl.h 
      GuiVolumeSelectionDialog.h 
      GuiVolumeSureFitSegmentationDialog.h 
      GuiVolumeThresholdSegmentationDialog.h 
      GuiVolumeTopologyReportDialog.h 
      GuiVolumeTypeComboBox.h 
      GuiVolumeVoxelDataTypeComboBox.h 
      GuiZipSpecFileDialog.h
)

QT4_WRAP_CPP(MOC_SOURCE_FILES ${MOC_INPUT_HEADER_FILES})


#
# Create a library
#
ADD_LIBRARY(CaretGui
     global_variables.h 
	   CommunicatorClientAFNI.h 
	   CommunicatorClientFIV.h 
	   CommunicatorClientBase.h 
	   GuiAddCellsDialog.h 
	   GuiAlignSurfaceToStandardOrientationDialog.h 
	   GuiApplyDeformationMapDialog.h 
	   GuiAverageBorderDialog.h 
	   GuiAverageCoordinateDialog.h 
	   GuiAutomaticRotationDialog.h 
	   GuiBatchCommandDialog.h 
	   GuiBorderAttributesDialog.h 
      GuiBorderComparisonDialog.h 
      GuiBorderDrawUpdateDialog.h 
	   GuiBorderNamesListBoxSelectionDialog.h 
      GuiBorderOperationsDialog.h 
	   GuiBorderProjectionDialog.h 
      GuiBordersCreateInterpolatedDialog.h 
      GuiBrainModelOpenGL.h 
      GuiBrainModelOpenGLKeyEvent.h 
	   GuiBrainModelOpenGLMouseEvent.h 
	   GuiBrainModelOpenGLPopupMenu.h 
      GuiBrainModelSelectionComboBox.h 
      GuiBrainModelSurfaceSelectionComboBox.h 
      GuiBrainModelViewingWindow.h 
      GuiBrainSetAndModelSelectionControl.h 
      GuiCaptureWindowImageDialog.h 
      GuiCaretCommandDialog.h 
      GuiCaretCommandScriptBuilderDialog.h 
      GuiCaretCommandWidget.h 
      GuiCaretTipsDialog.h 
      GuiCategoryComboBox.h 
      GuiCellAndFociAttributeAssignmentDialog.h 
      GuiCellAndFociReportDialog.h 
	   GuiCellAttributesDialog.h 
      GuiCellsOrFociProjectionDialog.h 
	   GuiChooseNodeAttributeColumnDialog.h 
      GuiChooseSpecFileDialog.h 
	   GuiColorFileEditorDialog.h 
      GuiColorFileEditorWidget.h 
      GuiColorKeyDialog.h 
	   GuiColorSelectionDialog.h 
      GuiCommaSeparatedValueFileEditor.h 
	   GuiCommunicatorClientConnectDialog.h 
      GuiConnectivityDialog.h 
	   GuiContourAlignmentDialog.h 
	   GuiContourDrawDialog.h 
	   GuiContourReconstructionDialog.h 
	   GuiContourSectionControlDialog.h 
	   GuiContourSetScaleDialog.h 
	   GuiConvertDataFileDialog.h 
      GuiCopySpecFileDialog.h 
	   GuiCurrentColoringToRgbPaintDialog.h 
	   GuiDataFileCommentDialog.h 
      GuiDataFileImportOptionsDialog.h 
      GuiDataFileMathDialog.h 
      GuiDataFileOpenDialog.h 
      GuiDataFileSaveDialog.h 
	   GuiDeformationFieldDialog.h 
	   GuiDeleteBordersByNameDialog.h 
	   GuiDisplayControlDialog.h 
      GuiDisplayControlSurfaceOverlayWidget.h 
	   GuiDistortionDialog.h 
	   GuiDrawBorderDialog.h 
      GuiFilesModified.h 
      GuiFileDialogWithInstructions.h 
      GuiFileSelectionButton.h 
      GuiFileSelectionButtonAndLineEditWidget.h 
      GuiFileSelectionListWidget.h 
      GuiFociPalsProjectionDialog.h 
      GuiFociSearchWidget.h 
	   GuiFociUncertaintyLimitsDialog.h 
      GuiFlattenFullHemisphereDialog.h 
	   GuiFlattenHemisphereDialog.h 
	   GuiFlattenHemisphereInstructionsDialog.h 
	   GuiGenerateArealEstimationDialog.h 
	   GuiGenerateSulcalDepthDialog.h 
	   GuiGenerateSurfaceCurvatureDialog.h 
      GuiGraphWidget.h 
      GuiGraphWidgetDialog.h 
      GuiHelpAssistantWindow.h 
      GuiHelpViewerWindow.h 
      GuiHistogramDisplayDialog.h 
      GuiHtmlColorChooserDialog.h 
	   GuiHyperLinkTextBrowser.h 
      GuiIdentifyDialog.h 
      GuiImageEditorWindow.h 
      GuiImageFormatComboBox.h 
      GuiImageResizeDialog.h 
      GuiImageViewingWindow.h 
	   GuiInflateAndSmoothFingersDialog.h 
	   GuiInflateSurfaceDialog.h 
	   GuiInterpolateSurfacesDialog.h 
      GuiLoadedFileManagementDialog.h 
      GuiMacOSXApplication.h 
      GuiMainWindow.h 
      GuiMainWindowAttributesActions.h 
	   GuiMainWindowAttributesMenu.h 
      GuiMainWindowCommActions.h 
	   GuiMainWindowCommMenu.h 
      GuiMainWindowFileActions.h 
      GuiMainWindowFileMenu.h 
      GuiMainWindowHelpActions.h 
      GuiMainWindowHelpMenu.h 
      GuiMainWindowLayersActions.h 
	   GuiMainWindowLayersMenu.h 
      GuiMainWindowSurfaceActions.h 
      GuiMainWindowSurfaceMenu.h 
      GuiMainWindowTimingActions.h 
      GuiMainWindowTimingMenu.h 
      GuiMainWindowVolumeActions.h 
	   GuiMainWindowVolumeMenu.h 
      GuiMainWindowWindowActions.h 
      GuiMainWindowWindowMenu.h 
      GuiMapFmriAtlasDialog.h   
      GuiMapFmriDialog.h 
      GuiMapFmriMappingSet.h 
      GuiMapFmriMetricInfo.h 
      GuiMapFmriSpecFileTopoCoordDialog.h 
      GuiMapFmriThresholdDialog.h 
      GuiMapFmriVolume.h 
      GuiMapStereotaxicFocusDialog.h 
	   GuiMetricModificationDialog.h 
	   GuiMetricsToRgbPaintDialog.h 
      GuiModelSelectionControl.h 
      GuiModelsEditorDialog.h 
	   GuiMorphingDialog.h 
	   GuiMorphingMeasurementsDialog.h 
      GuiMouseModePopupMenu.h 
	   GuiMultipleInputDialog.h 
	   GuiMultiresolutionMorphingDialog.h 
	   GuiNameSelectionDialog.h 
	   GuiNodeAttributeColumnSelectionComboBox.h 
	   GuiNodeAttributeFileClearResetDialog.h 
	   GuiLoadNodeAttributeFileColumnSelectionDialog.h 
	   GuiPaintColumnNamesListBoxSelectionDialog.h 
	   GuiPaintNameEditorDialog.h 
      GuiPaletteColorSelectionDialog.h 
      GuiPaletteEditorDialog.h 
      GuiParamsFileEditorDialog.h 
	   GuiPreferencesDialog.h 
      GuiPreviousSpecFileComboBox.h 
	   GuiRecordingDialog.h 
	   GuiResectionDialog.h 
	   GuiSectionControlDialog.h 
	   GuiSetTopologyDialog.h 
	   GuiSetViewDialog.h 
      GuiShapeOrVectorsFromCoordinateSubtractionDialog.h 
      GuiShellCommandWindow.h 
	   GuiSmoothingDialog.h 
      GuiSpecAndSceneFileCreationDialog.h 
      GuiSpecFileCreationDialog.h 
      GuiSpecFileDialog.h 
      GuiSpeciesComboBox.h 
      GuiStandardMeshDialog.h 
      GuiStereotaxicSpaceComboBox.h 
      GuiStructureComboBox.h 
      GuiStudyCollectionFileEditorDialog.h 
      GuiStudyInfoEditorWidget.h 
      GuiStudyMetaDataFileEditorDialog.h 
      GuiStudyMetaDataLinkCreationDialog.h 
      GuiSumsDialog.h 
	   GuiSurfaceDeformationDialog.h 
	   GuiSurfaceInformationDialog.h 
	   GuiSurfaceRegionOfInterestDialog.h 
	   GuiSurfaceRegionOfInterestDialogOLD.h 
	   GuiSurfaceSpmTransformDialog.h 
	   GuiSurfaceToVolumeDialog.h 
      GuiSurfaceTopologyReportDialog.h 
      GuiSurfaceTypeComboBox.h 
      GuiTextBrowser.h 
	   GuiToolBar.h 
      GuiToolBarActions.h 
	   GuiTopologyFileComboBox.h 
      GuiTopologyTypeComboBox.h 
	   GuiTransformationMatrixDialog.h 
      GuiTransformationMatrixSelectionControl.h 
	   GuiUserViewSaveDialog.h 
      GuiVectorFileComboBox.h 
      GuiVocabularyFileEditorDialog.h 
	   GuiVolumeAttributesDialog.h 
      GuiVolumeBiasCorrectionDialog.h 
      GuiVolumeCreateDialog.h 
	   GuiVolumeFileOrientationComboBox.h 
	   GuiVolumeFileSelectionComboBox.h 
      GuiVolumeFileTypeComboBox.h 
	   GuiVolumeHandleFinderDialog.h 
      GuiVolumePaintEditorDialog.h 
	   GuiVolumeReconstructionDialog.h 
	   GuiVolumeRegionOfInterestDialog.h 
      GuiVolumeRescaleDialog.h 
	   GuiVolumeResizingDialog.h 
	   GuiVolumeSegmentationEditorDialog.h 
      GuiVolumeSelectionControl.h 
      GuiVolumeSelectionDialog.h 
      GuiVolumeSureFitSegmentationDialog.h 
      GuiVolumeThresholdSegmentationDialog.h 
      GuiVolumeTopologyReportDialog.h 
      GuiVolumeTypeComboBox.h 
      GuiVolumeVoxelDataTypeComboBox.h 
      GuiZipSpecFileDialog.h

      ${MOC_SOURCE_FILES}

      CommunicatorClientAFNI.cxx 
	   CommunicatorClientFIV.cxx 
	   CommunicatorClientBase.cxx 
	   GuiAddCellsDialog.cxx 
	   GuiAlignSurfaceToStandardOrientationDialog.cxx 
	   GuiApplyDeformationMapDialog.cxx 
	   GuiAutomaticRotationDialog.cxx 
	   GuiAverageBorderDialog.cxx 
	   GuiAverageCoordinateDialog.cxx 
	   GuiBatchCommandDialog.cxx 
	   GuiBorderAttributesDialog.cxx 
      GuiBorderComparisonDialog.cxx 
      GuiBorderDrawUpdateDialog.cxx 
	   GuiBorderNamesListBoxSelectionDialog.cxx 
      GuiBorderOperationsDialog.cxx 
	   GuiBorderProjectionDialog.cxx 
      GuiBordersCreateInterpolatedDialog.cxx 
	   GuiBrainModelOpenGL.cxx 
      GuiBrainModelOpenGLKeyEvent.cxx 
	   GuiBrainModelOpenGLMouseEvent.cxx 
	   GuiBrainModelOpenGLPopupMenu.cxx 
      GuiBrainModelSelectionComboBox.cxx 
      GuiBrainModelSurfaceSelectionComboBox.cxx 
      GuiBrainModelViewingWindow.cxx 
      GuiBrainSetAndModelSelectionControl.cxx 
      GuiCaptureWindowImageDialog.cxx 
      GuiCaretCommandDialog.cxx 
      GuiCaretCommandScriptBuilderDialog.cxx 
      GuiCaretCommandWidget.cxx 
      GuiCaretTipsDialog.cxx 
      GuiCategoryComboBox.cxx 
      GuiCellAndFociAttributeAssignmentDialog.cxx 
      GuiCellAndFociReportDialog.cxx 
	   GuiCellAttributesDialog.cxx 
      GuiCellsOrFociProjectionDialog.cxx 
	   GuiChooseNodeAttributeColumnDialog.cxx 
      GuiChooseSpecFileDialog.cxx 
	   GuiColorFileEditorDialog.cxx 
      GuiColorFileEditorWidget.cxx 
      GuiColorKeyDialog.cxx 
	   GuiColorSelectionDialog.cxx 
      GuiCommaSeparatedValueFileEditor.cxx 
	   GuiCommunicatorClientConnectDialog.cxx 
      GuiConnectivityDialog.cxx 
	   GuiContourAlignmentDialog.cxx 
	   GuiContourDrawDialog.cxx 
	   GuiContourReconstructionDialog.cxx 
	   GuiContourSectionControlDialog.cxx 
	   GuiContourSetScaleDialog.cxx 
	   GuiConvertDataFileDialog.cxx 
      GuiCopySpecFileDialog.cxx  
	   GuiCurrentColoringToRgbPaintDialog.cxx 
	   GuiDataFileCommentDialog.cxx 
      GuiDataFileImportOptionsDialog.cxx 
      GuiDataFileMathDialog.cxx 
      GuiDataFileOpenDialog.cxx 
      GuiDataFileSaveDialog.cxx 
	   GuiDeformationFieldDialog.cxx 
	   GuiDeleteBordersByNameDialog.cxx 
	   GuiDisplayControlDialog.cxx 
      GuiDisplayControlSurfaceOverlayWidget.cxx 
	   GuiDistortionDialog.cxx 
	   GuiDrawBorderDialog.cxx 
      GuiFilesModified.cxx 
      GuiFileDialogWithInstructions.cxx 
      GuiFileSelectionButton.cxx 
      GuiFileSelectionButtonAndLineEditWidget.cxx 
      GuiFileSelectionListWidget.cxx 
      GuiFociPalsProjectionDialog.cxx 
      GuiFociSearchWidget.cxx 
	   GuiFociUncertaintyLimitsDialog.cxx 
      GuiFlattenFullHemisphereDialog.cxx 
	   GuiFlattenHemisphereDialog.cxx 
	   GuiFlattenHemisphereInstructionsDialog.cxx 
	   GuiGenerateArealEstimationDialog.cxx 
	   GuiGenerateSulcalDepthDialog.cxx 
	   GuiGenerateSurfaceCurvatureDialog.cxx 
      GuiGraphWidget.cxx 
      GuiGraphWidgetDialog.cxx 
      GuiHelpAssistantWindow.cxx 
      GuiHelpViewerWindow.cxx 
      GuiHistogramDisplayDialog.cxx 
      GuiHtmlColorChooserDialog.cxx 
	   GuiHyperLinkTextBrowser.cxx 
      GuiIdentifyDialog.cxx 
      GuiImageEditorWindow.cxx 
      GuiImageFormatComboBox.cxx 
      GuiImageResizeDialog.cxx 
      GuiImageViewingWindow.cxx 
	   GuiInflateAndSmoothFingersDialog.cxx 
	   GuiInflateSurfaceDialog.cxx 
	   GuiInterpolateSurfacesDialog.cxx 
      GuiLoadedFileManagementDialog.cxx 
      GuiMacOSXApplication.cxx 
      GuiMainWindow.cxx 
      GuiMainWindowAttributesActions.cxx 
	   GuiMainWindowAttributesMenu.cxx 
      GuiMainWindowCommActions.cxx 
	   GuiMainWindowCommMenu.cxx 
      GuiMainWindowFileActions.cxx 
      GuiMainWindowFileMenu.cxx 
      GuiMainWindowHelpActions.cxx 
      GuiMainWindowHelpMenu.cxx 
      GuiMainWindowLayersActions.cxx 
	   GuiMainWindowLayersMenu.cxx 
      GuiMainWindowTimingActions.cxx 
      GuiMainWindowTimingMenu.cxx 
      GuiMainWindowSurfaceActions.cxx 
      GuiMainWindowSurfaceMenu.cxx 
      GuiMainWindowVolumeActions.cxx 
	   GuiMainWindowVolumeMenu.cxx 
      GuiMainWindowWindowActions.cxx 
      GuiMainWindowWindowMenu.cxx 
      GuiMapFmriAtlasDialog.cxx 
      GuiMapFmriDialog.cxx 
      GuiMapFmriMappingSet.cxx 
      GuiMapFmriMetricInfo.cxx 
      GuiMapFmriSpecFileTopoCoordDialog.cxx 
      GuiMapFmriThresholdDialog.cxx 
      GuiMapFmriVolume.cxx	
      GuiMapStereotaxicFocusDialog.cxx 
	   GuiMetricModificationDialog.cxx 
	   GuiMetricsToRgbPaintDialog.cxx 
      GuiModelSelectionControl.cxx 
      GuiModelsEditorDialog.cxx 
	   GuiMorphingDialog.cxx 
	   GuiMorphingMeasurementsDialog.cxx 
      GuiMouseModePopupMenu.cxx 
	   GuiMultipleInputDialog.cxx 
	   GuiMultiresolutionMorphingDialog.cxx 
	   GuiNameSelectionDialog.cxx 
	   GuiNodeAttributeColumnSelectionComboBox.cxx 
	   GuiNodeAttributeFileClearResetDialog.cxx 
	   GuiLoadNodeAttributeFileColumnSelectionDialog.cxx 
	   GuiPaintColumnNamesListBoxSelectionDialog.cxx 
	   GuiPaintNameEditorDialog.cxx 
      GuiPaletteColorSelectionDialog.cxx 
      GuiPaletteEditorDialog.cxx 
      GuiParamsFileEditorDialog.cxx 
	   GuiPreferencesDialog.cxx 
      GuiPreviousSpecFileComboBox.cxx 
	   GuiRecordingDialog.cxx 
	   GuiResectionDialog.cxx 
	   GuiSetTopologyDialog.cxx 
	   GuiSetViewDialog.cxx 
      GuiShapeOrVectorsFromCoordinateSubtractionDialog.cxx 
	   GuiSectionControlDialog.cxx 
      GuiShellCommandWindow.cxx 
	   GuiSmoothingDialog.cxx 
      GuiSpecAndSceneFileCreationDialog.cxx 
      GuiSpecFileCreationDialog.cxx 
      GuiSpecFileDialog.cxx 
      GuiSpeciesComboBox.cxx 
      GuiStandardMeshDialog.cxx 
      GuiStereotaxicSpaceComboBox.cxx 
      GuiStructureComboBox.cxx 
      GuiStudyCollectionFileEditorDialog.cxx 
      GuiStudyInfoEditorWidget.cxx 
      GuiStudyMetaDataFileEditorDialog.cxx 
      GuiStudyMetaDataLinkCreationDialog.cxx 
      GuiSumsDialog.cxx 
	   GuiSurfaceDeformationDialog.cxx 
	   GuiSurfaceInformationDialog.cxx 
	   GuiSurfaceRegionOfInterestDialog.cxx 
	   GuiSurfaceRegionOfInterestDialogOLD.cxx 
	   GuiSurfaceSpmTransformDialog.cxx 
	   GuiSurfaceToVolumeDialog.cxx 
      GuiSurfaceTopologyReportDialog.cxx 
      GuiSurfaceTypeComboBox.cxx 
      GuiTextBrowser.cxx 
      GuiTopologyTypeComboBox.cxx 
	   GuiToolBar.cxx 
      GuiToolBarActions.cxx 
	   GuiTopologyFileComboBox.cxx 
	   GuiTransformationMatrixDialog.cxx 
      GuiTransformationMatrixSelectionControl.cxx 
	   GuiUserViewSaveDialog.cxx 
      GuiVectorFileComboBox.cxx 
      GuiVocabularyFileEditorDialog.cxx 
	   GuiVolumeAttributesDialog.cxx 
      GuiVolumeBiasCorrectionDialog.cxx 
      GuiVolumeCreateDialog.cxx 
	   GuiVolumeFileOrientationComboBox.cxx 
	   GuiVolumeFileSelectionComboBox.cxx 
      GuiVolumeFileTypeComboBox.cxx 
	   GuiVolumeHandleFinderDialog.cxx 
      GuiVolumePaintEditorDialog.cxx 
	   GuiVolumeReconstructionDialog.cxx 
	   GuiVolumeRegionOfInterestDialog.cxx 
      GuiVolumeRescaleDialog.cxx 
	   GuiVolumeResizingDialog.cxx 
	   GuiVolumeSegmentationEditorDialog.cxx 
      GuiVolumeSelectionControl.cxx 
      GuiVolumeSelectionDialog.cxx 
      GuiVolumeSureFitSegmentationDialog.cxx 
      GuiVolumeThresholdSegmentationDialog.cxx 
      GuiVolumeTopologyReportDialog.cxx 
      GuiVolumeTypeComboBox.cxx 
      GuiVolumeVoxelDataTypeComboBox.cxx 
      GuiZipSpecFileDialog.cxx 
)

#
# Include directories
#
INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/caret_brain_set
${CMAKE_SOURCE_DIR}/caret_cifti
${CMAKE_SOURCE_DIR}/caret_common
${CMAKE_SOURCE_DIR}/caret_command_operations
${CMAKE_SOURCE_DIR}/caret_files
${CMAKE_SOURCE_DIR}/caret_gifti
${CMAKE_SOURCE_DIR}/caret_gui
${CMAKE_SOURCE_DIR}/caret_statistics
${CMAKE_SOURCE_DIR}/caret_uniformize
${CMAKE_SOURCE_DIR}/caret_widgets
)
